examples/datalog/18_advanced_patterns/111_running_total.dl
% Test: Running total pattern
% Expected: Compute cumulative sum using recursion
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_running
.kg use test_running

+txns[(1, 100), (2, 50), (3, 75), (4, 25)].

% Find total of all transactions
+total_sum(<SUM:Amt>) :- txns(_, Amt).

?- total_sum(T).

.kg use default
.kg drop test_running
